--- a/index.html
+++ b/index.html
@@ -9,11 +9,30 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="script.js"></script>
     <title>CodeFriends</title>
+
+    <!-- To Contribute, create your signature! 
+
+        copy - paste this code with your own message and ID
+
+            <p id="Your name">Put a message here</p>
+
+        Next, go to styles.css and follow this code
+
+            #youridname {
+                color: (use hex (ie #eee) or rgb(0, 255, 255) or just set a color like blue);
+                font-style: italic;
+                font-weight: bold;
+            }
+
+        Now you're all set and have a contribution. Next, push this code to git hub and 
+        submit a pull request -->
 </head>
 <body>
     <h1>START CODING!</h1>
 
-    <p id="Kevin">Hello World</p>
+    <p id="Kevin">Kevin Velasquez was here</p>
+
+    <p id="Anthony">Anthony Campos was here</p>
 
 </body>
 </html>
