--- a/playground.html
+++ b/playground.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
     <title>Playground</title>
 </head>
 <body>
@@ -19,6 +19,24 @@
             HTML5 Pong Game (medium, ~1 week to finish)
             Weather App (hard, ~1.5 weeks to finish)
             Tic Tac Toe (hard, ~2 weeks to finish) -->
-                
+    <div class="container">
+        <div class="row text-center header">
+            <div class="col-12">
+                <h1>Playground for the homies</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-6" id="left-column">
+                <button class="btn btn-lg" id="popup">Click me!</button>
+                <p id="quote"></p>
+            </div>            
+            <div class="col-6" id="right-column">
+                <button class="btn btn-lg" id="remove">Shutdown!</button>
+            </div>
+        </div>
+    </div>  
+    
+    <script src="script.js"></script>
 </body>
 </html>
