--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <p id="Kevin">Kevin Velasquez was here</p>
 
-    <p id="Anthony">Anthony Campos was here</p>
+    <p id="Anthony">Anthony Campos likes butt stuff</p>
 
 </body>
 </html>
