--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 
     <p id="Kevin">Kevin Velasquez was here!!!</p>
 
-    <p id="Anthony">Anthony Campos likes butt stuff</p>
+    <p id="Anthony">Anthony Campos was here!!!</p>
+
+    <p id="Nick">Nick Vincent was here!!!</p>
+
+    <p id="Luis">Luis Caro was here!!!</p>
 
 </body>
 </html>
