--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <p id="Luis">Luis Caro was here!!!</p>
 
-   <h1>HELLO THERE Stranger</h1>
+   <h1>HELLO THERE Stranger do you have a moment to talk about our lord and savior</h1>
 
 
 </body>
