--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
     <p id="Luis">Luis Caro was here!!!</p>
 
-    <h1>HELLO THERE</h1>
+   <h1>This is our coding test</h1>
+
+
 </body>
 </html>
