--- a/playground.html
+++ b/playground.html
@@ -29,7 +29,7 @@
         <div class="row text-center">
             <div class="col-6" id="left-column">
                 <button class="btn btn-lg" id="popup">Click me!</button>
-                <p id="quote"></p>
+                <p id="quote">Heloo</p>
             </div>            
             <div class="col-6" id="right-column">
                 <button class="btn btn-lg" id="remove">Shutdown!</button>
