--- a/playground.html
+++ b/playground.html
@@ -28,11 +28,11 @@
         </div>
         <div class="row text-center">
             <div class="col-6" id="left-column">
-                <button class="btn btn-lg" id="popup">Click me!</button>
+                <button class="btn btn-lg" id="popup">Time</button>
                 <p id="quote">Heloo</p>
             </div>            
             <div class="col-6" id="right-column">
-                <button class="btn btn-lg" id="remove">Shutdown!</button>
+                <button class="btn btn-lg" id="remove">Background</button>
             </div>
         </div>
     </div>  
