--- a/playground.html
+++ b/playground.html
@@ -28,7 +28,7 @@
         </div>
         <div class="row text-center">
             <div class="col-6" id="left-column">
-                <button class="btn btn-lg" id="popup">Time</button>
+                <button class="btn btn-lg" id="popup">Tim</button>
                 <p id="quote">Heloo</p>
             </div>            
             <div class="col-6" id="right-column">
