--- a/playground.html
+++ b/playground.html
@@ -28,8 +28,8 @@
         </div>
         <div class="row text-center">
             <div class="col-6" id="left-column">
-                <button class="btn btn-lg" id="popup">Tim</button>
-                <p id="quote">Heloo</p>
+                <button class="btn btn-lg" id="popup">Time</button>
+                <p id="quote">Hello</p>
             </div>            
             <div class="col-6" id="right-column">
                 <button class="btn btn-lg" id="remove">Background</button>
