--- a/playground.html
+++ b/playground.html
@@ -28,16 +28,12 @@
         </div>
         <div class="row text-center">
             <div class="col-6" id="left-column">
-<<<<<<< HEAD
                 <button class="btn btn-lg" id="popup">Time</button>
-                <p id="quote">Hello</p>
-=======
-                <button class="btn btn-lg" id="popup">Tim</button>
-                <p id="quote">Heloo</p>
->>>>>>> 51f941f222296e722a5da13b60fb17aa8e462ae9
+                <p id="quote"></p>
             </div>            
             <div class="col-6" id="right-column">
                 <button class="btn btn-lg" id="remove">Background</button>
+                <p id="subtext"></p>
             </div>
         </div>
     </div>  
